# foundamental

./: .gitignore  CODEOWNERS  LICENSE  README.md  config.json  demo.py  demo_competitor_graph.py  demo_hallucination.py  foundamental.py  main.py  pyproject.toml  setup.py  test_suite.py
baml_client/: __init__.py  async_client.py  config.py  globals.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  tracing.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  llm_seo.baml  resume.baml
docs/: competitor_graph_architecture.md  hallucination_filter_architecture.md  llm_as_judge_architecture.md
examples/: demo.py  demo_competitor_graph.py  demo_hallucination.py
src/: analyze.py  competitor_graph.py  hallucination_filter.py  llm_evaluator.py  run.py  run_with_sources.py  sentiment_analyzer.py
src/providers/: base.py  ollama_provider.py  ollama_provider_with_sources.py  openai_provider.py  openai_provider_with_sources.py
tests/: test_llm_evaluator.py  test_suite.py
ui/: Cargo.toml  README.md  Rocket.toml
ui/src/: db.rs  main.rs  models.rs  routes.rs
ui/static/css/: style.css
ui/static/js/: app.js
ui/templates/: base.html.tera  brands.html.tera  competitors.html.tera  hallucinations.html.tera  index.html.tera  providers.html.tera
